syntax = "proto3";
package app.protos;

import "app/protos/types.proto";
import "google/rpc/status.proto";

option go_package = "protos/parser";

service CategoryParser {
  rpc GetRootCategories(RootCategoriesRequest) returns (stream CategoryResponse);
  rpc GetSubCategories(SubCategoriesRequest) returns (stream CategoryResponse);
}

message RootCategoriesRequest {
  Markets market = 1;
}

message SubCategoriesRequest {
  Markets market = 1;
  string categoryUrl = 2;
}

message CategoryResponse {
  oneof message {
    Category category = 1;
    google.rpc.Status status = 2;
  }
}

message Category {
  string title = 1;
  string url = 2;
  optional string parentUrl = 3;
  optional bool isParsed = 4;
}